[project]
name = "site-reliability-server"
version = "1.1.0"
description = "OpenEnv environment for SRE incident response simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi==0.115.0",
	"httpx==0.27.2",
	"openenv>=0.1.13",
	"openai==1.50.0",
	"pydantic==2.8.2",
	"python-multipart==0.0.12",
	"requests==2.32.3",
	"uvicorn==0.30.6",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
